undo last commit (wrong branch :()